@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.torquebox</groupId>
     <artifactId>torquebox-parent</artifactId>
-    <version>2.0.0.CR1-SNAPSHOT</version>
+    <version>2.0.2-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
@@ -32,6 +32,11 @@
 
   <dependencyManagement>
     <dependencies>
+      <dependency>
+        <groupId>org.apache.httpcomponents</groupId>
+        <artifactId>httpmime</artifactId>
+        <version>4.0.1</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
@@ -59,6 +64,11 @@
       <version>1.1.1</version>
     </dependency>
     <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.1</version>
+    </dependency>
+    <dependency>
       <groupId>xerces</groupId>
       <artifactId>xercesImpl</artifactId>
       <version>2.8.1</version>
@@ -77,6 +87,16 @@
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpmime</artifactId>
       <version>4.0.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.1.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpcore</artifactId>
+      <version>4.1.4</version>
     </dependency>
 
     <dependency>
@@ -296,6 +316,15 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>rubygems</groupId>
+      <artifactId>newrelic_rpm</artifactId>
+      <version>${version.newrelic}</version>
+      <type>gem</type>
+      <scope>test</scope>
+    </dependency>
+
+
 
   </dependencies>
 
@@ -304,7 +333,6 @@
       <id>ci</id>
       <properties>
         <driver.type>headless</driver.type>
-        <max.heap>2560m</max.heap>
       </properties>
     </profile>
     <profile>
@@ -451,7 +479,7 @@
         <groupId>de.saumya.mojo</groupId>
         <artifactId>rspec-maven-plugin</artifactId>
         <configuration>
-          <jrubyJvmArgs>-XX:MaxPermSize=384m -Xmx256m -Xmx1280m -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps</jrubyJvmArgs>
+          <jrubyJvmArgs>-XX:MaxPermSize=256m -Xms64m -Xmx1280m</jrubyJvmArgs>
           <systemProperties>
             <property>
               <name>max.heap</name>
